apps/insect-project-subscription-manager/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscription-manager
  template:
    metadata:
      labels:
        app: subscription-manager
      annotations:
        redeploy-timestamp: "2026-03-04T13:39:00"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
      - name: subscription-manager
        image: ghcr.io/ai-cfia/insect-project-subscription-manager:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: app-data
          mountPath: /app/data
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: app-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: subscription-manager
spec:
  selector:
    app: subscription-manager
  ports:
    - port: 5000
  type: ClusterIP
